2.8.4: переписан алогоритм для инструмента /osprocinfo - используется wmic для Windows